fix repo filter bug